test/files/neg/t8207.scala
class C { import C.this.toString }

class D { import D.this.toString }
